Dev Main/src/objects/Guest_Card__c.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guest Cards (Community)</relationshipLabel>
        <relationshipName>Guest_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guest Cards</relationshipLabel>
        <relationshipName>Guest_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Guest Card</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Guest Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>